@@ -1,6 +1,7 @@
-package ee.buerokratt.ruuter.domain;
+package ee.buerokratt.ruuter.domain.steps;
 
 import com.fasterxml.jackson.annotation.JsonAlias;
+import ee.buerokratt.ruuter.domain.ConfigurationInstance;
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
@@ -13,8 +14,11 @@ import lombok.extern.slf4j.Slf4j;
 public abstract class ConfigurationStep {
     @JsonAlias({"step"})
     private String name;
+    @JsonAlias({"next"})
+    private String nextStepName;
+    private Boolean skip;
 
     public void execute(ConfigurationInstance configurationInstance) {
-        log.info(String.format("executing step: %s", name));
+        log.info("executing step: %s".formatted(name));
     }
 }
